--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,27 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+<ion-content class="home">
+  <ion-list>
+    <ion-item *ngFor="let disease of cancer">
+
+      <h2>{{disease.Model}}</h2>
+      <!-- <img src={{disease.avatar}} > -->
+
+      <h2>{{disease.accuracy}}</h2>
+
+    </ion-item>
+
+
+  <ion-item>
+    <ion-label color="primary">sizeOfCancer</ion-label>
+    <ion-input [(ngModel)]="sizeOfCancer" placeholder="Text Input"></ion-input>
+  </ion-item>
+
+    <button ion-button full color="danger" (click)="checkCancer()">Submit</button>
+
+</ion-list>
+
+
 </ion-content>
